Fix Spacing on Senior, Family, and Preschool pages.

--- a/styles/Content.module.css
+++ b/styles/Content.module.css
@@ -142,12 +142,6 @@
   flex-wrap: wrap;
 }
 
-@media (max-width: 1280px) {
-  .container {
-    padding: 0 3rem;
-  }
-}
-
 @media (max-width: 1080px) {
   .twoColWrap {
     justify-content: center;
@@ -156,6 +150,7 @@
 
   .col1 {
     order: 2;
+    margin: 0 auto;
   }
 
   .col2 {
